# new_car_autoware

./: .gitattributes  .gitignore
src/byd/agv_simple_reverse_planner/: CMakeLists.txt  package.xml
src/byd/agv_simple_reverse_planner/config/: agv_simple_reverse_planner.param.yaml
src/byd/agv_simple_reverse_planner/launch/: agv_simple_reverse_planner.launch.py
src/byd/agv_simple_reverse_planner/src/: agv_simple_reverse_planner_node.cpp
src/byd/byd_vehicle_state/: CMakeLists.txt  package.xml
src/byd/byd_vehicle_state/config/: vehicle_state.param.yaml
src/byd/byd_vehicle_state/launch/: vehicle_state.launch.py
src/byd/byd_vehicle_state/src/: vehicle_state_node.cpp
src/byd/launch/: CMakeLists.txt  applications.launch.py  bringup.launch.py  drivers.launch.py  launch_utils.py  package.xml  parallel_bringup.launch.py  pedestrian_safety_stop.launch.py  reverse_parking.launch.py
src/byd/launch/config/: pedestrian_safety_stop.param.yaml
src/byd/launch/scripts/: check_autonomous_transition.py  setup_external_control_mode.sh  wait_for_ros_ready.py
src/byd/launch/test/: test_check_autonomous_transition.py  test_pedestrian_safety_stop.py
src/byd/reverse_parking_controller/: CMakeLists.txt  README.md  package.xml
src/byd/reverse_parking_controller/config/: reverse_parking_controller.param.yaml
src/byd/reverse_parking_controller/launch/: reverse_parking_controller.launch.py
src/byd/reverse_parking_controller/src/: reverse_parking_controller_node.cpp
src/byd/reverse_parking_planner/: CMakeLists.txt  README.md  byd_reverse_parking_planner_note.md  package.xml
src/byd/reverse_parking_planner/config/: reverse_parking_planner.param.yaml
src/byd/reverse_parking_planner/launch/: reverse_parking_planner.launch.py
src/byd/reverse_parking_planner/scripts/: smoke_check_reverse_parking.sh
src/byd/reverse_parking_planner/src/: reeds_shepp.cpp  reverse_parking_planner_node.cpp
src/byd/reverse_parking_planner/srv/: SetGoalPose.srv
src/calib/lidar_camera_calibrator/: CMakeLists.txt  package.xml
src/calib/lidar_camera_calibrator/config/: camera.param.yaml  lidar_camera_calib.param.yaml
src/calib/lidar_camera_calibrator/include/: calibration_error_term.h  lidar_camera_calib_node.hpp
src/calib/lidar_camera_calibrator/launch/: lidar_camera_calibrator.xml
src/calib/lidar_camera_calibrator/src/: lidar_camera_calib_node.cpp
src/calib/lidar_camera_projector/: CMakeLists.txt  package.xml
src/calib/lidar_camera_projector/config/: camera.param.yaml  lidar_camera_calib.param.yaml
src/calib/lidar_camera_projector/include/: lidar_camera_proj_node.hpp
src/calib/lidar_camera_projector/launch/: lidar_camera_projector.xml
src/calib/lidar_camera_projector/src/: lidar_camera_proj_node.cpp
src/didrive_perception/didrive_detected_object_validation/: CMakeLists.txt  package.xml
src/didrive_perception/didrive_detected_object_validation/config/: object_lanelet_filter.param.yaml
src/didrive_perception/didrive_detected_object_validation/launch/: object_lanelet_filter.launch.xml
src/didrive_perception/didrive_detected_object_validation/test/: test_utils.cpp
src/didrive_perception/didrive_euclidean_cluster/: CMakeLists.txt  package.xml
src/didrive_perception/didrive_euclidean_cluster/config/: voxel_grid_based_euclidean_cluster.param.yaml
src/didrive_perception/didrive_euclidean_cluster/launch/: euclidean_cluster.launch.py  euclidean_cluster.launch.xml  voxel_grid_based_euclidean_cluster.launch.py  voxel_grid_based_euclidean_cluster.launch.xml
src/didrive_perception/didrive_euclidean_cluster/lib/: euclidean_cluster.cpp  utils.cpp  voxel_grid_based_euclidean_cluster.cpp
src/didrive_perception/didrive_euclidean_cluster/src/: euclidean_cluster_node.cpp  euclidean_cluster_node.hpp  voxel_grid_based_euclidean_cluster_node.cpp  voxel_grid_based_euclidean_cluster_node.hpp
src/didrive_perception/didrive_euclidean_cluster/test/: test_voxel_grid_based_euclidean_cluster.cpp
src/didrive_perception/didrive_front_collision_warning/: CMakeLists.txt  package.xml
src/didrive_perception/didrive_front_collision_warning/config/: front_collision_warning.param.yaml
src/didrive_perception/didrive_front_collision_warning/launch/: front_collision_warning.launch.xml
src/didrive_perception/didrive_front_collision_warning/src/: front_collision_warning_node.cpp  risk_evaluator.cpp
src/didrive_perception/didrive_front_collision_warning/test/: test_risk_evaluator.cpp
src/didrive_perception/didrive_multi_object_tracker/: CMakeLists.txt  package.xml
src/didrive_perception/didrive_multi_object_tracker/config/: multi_object_tracker_node.param.yaml
src/didrive_perception/didrive_multi_object_tracker/launch/: multi_object_tracker.launch.xml
src/didrive_perception/didrive_multi_object_tracker/src/: multi_object_tracker_node.cpp  multi_object_tracker_node.hpp
src/didrive_perception/didrive_object_merger/: CMakeLists.txt  package.xml
src/didrive_perception/didrive_object_merger/config/: object_association_merger.param.yaml
src/didrive_perception/didrive_object_merger/src/: object_association_merger_node.cpp
src/didrive_perception/didrive_patchwork/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
src/didrive_perception/didrive_rear_pedestrian_warning/: CMakeLists.txt  package.xml  readme.md
src/didrive_perception/didrive_ufld_ros/: CMakeLists.txt  package.xml  readme.txt  test_publisher.py
src/didrive_perception/didrive_yolo_detector/: CMakeLists.txt  package.xml
src/didrive_perception/ros2_bevfusion/: CMakeLists.txt  package.xml
src/didrive_perception/ros2_bevfusion_async/: CMakeLists.txt  package.xml  readme.md
src/recorder/multi_recorder/: CMakeLists.txt  package.xml  readme.md
src/vehicle_video_recorder/: README.md  package.xml  readme.md  setup.cfg  setup.py
src/vehicle_video_recorder/config/: camera0.param.yaml  camera1.param.yaml  camera2.param.yaml  camera3.param.yaml  camera4.param.yaml  camera5.param.yaml  camera6.param.yaml
src/vehicle_video_recorder/launch/: recorder_launch.xml
src/vehicle_video_recorder/vehicle_video_recorder/: recorder_node.py
(+680 files in other folders)
