<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>byd_launch</name>
  <version>0.0.1</version>
  <description>BYD bringup launch files</description>
  <maintainer email="byd@byd.com">BYD</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>can_driver</exec_depend>
  <exec_depend>can_rtk_driver</exec_depend>
  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>agv_to_rcs</exec_depend>
  <exec_depend>reverse_parking_planner</exec_depend>
  <exec_depend>reverse_parking_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
