<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>byd_launch</name>
  <version>0.0.1</version>
  <description>BYD bringup launch files</description>
  <maintainer email="byd@byd.com">BYD</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>can_driver</exec_depend>
  <exec_depend>can_six_driver</exec_depend>
  <exec_depend>byd_auto_engage</exec_depend>
  <exec_depend>byd_vehicle_state</exec_depend>
  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>agv_to_rcs</exec_depend>
  <exec_depend>autoware_launch</exec_depend>
  <exec_depend>autoware_surround_obstacle_checker</exec_depend>
  <exec_depend>byd_vehicle_description</exec_depend>
  <exec_depend>reverse_parking_planner</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>agv_simple_reverse_planner</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>autoware_adapi_v1_msgs</exec_depend>
  <exec_depend>autoware_control_msgs</exec_depend>
  <exec_depend>autoware_planning_msgs</exec_depend>
  <exec_depend>autoware_vehicle_msgs</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
