<?xml version="1.0"?>
<package format="3">
  <name>didrive_front_collision_warning</name>
  <version>0.1.0</version>
  <description>Warn when a vehicle approaches the stopped ego vehicle from the front.</description>
  <maintainer email="he.gang2@byd.com">Gang He</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_control_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_utils_uuid</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
