<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>didrive_multi_object_tracker</name>
  <version>1.0.0</version>
  <description>The ROS 2 didrive_multi_object_tracker package</description>
  <maintainer email="he.gang2@byd.com">Gang He</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>autoware_kalman_filter</depend>
  <depend>autoware_object_recognition_utils</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_universe_utils</depend>
  <depend>diagnostic_updater</depend>
  <depend>eigen</depend>
  <depend>glog</depend>
  <depend>mussp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>libopencv-dev</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
