<?xml version="1.0"?>
<package format="3">
  <name>didrive_patchwork</name>
  <version>0.1.0</version>
  <description>Patchwork++ ROS 2 Wrapper</description>
  <maintainer email="he.gang2@byd.com">Gang He</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>autoware_universe_utils</depend>
  <depend>cv_bridge</depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
